package ar.edu.utn.frba.dds.quemepongo.model.clima;

public interface ServicioMeteorologico {
  Temperatura getTemperatura();
}
