@startuml iteracion-4

class Guardarropa {
  sugerir() : Atuendo
}

Guardarropa ..> Atuendo
Guardarropa -right-> "*" Prenda
Guardarropa -right-> ServicioMeteorologico

interface ServicioMeteorologico {
    getTemperatura()
}

ServicioMeteorologico ..> Temperatura

ServicioMeteorologico <|.right. AccuWeather

class AccuWeather {
    ultimaActualizacion : LocalDateTime
}

AccuWeather --> Temperatura
AccuWeather ..> AccuWeatherAPI

interface AccuWeatherAPI {
    getWeather(city) : Map<String, Object>
}

enum Temperatura {
    FRIO,
    TEMPLADO,
    CALIDO
    {static} ofCelsius(celsius)
    {static} ofFahrenheit(fahrenheit)
}

class Atuendo {
   superior
   inferior
   calzado
   accesorio
}

Atuendo --> Prenda
Atuendo --> Prenda
Atuendo --> Prenda
Atuendo --> Prenda

class Prenda {
 esDeCategoria(categoria)
 esSugerible()
 esAptaPara(temperatura)
}

Prenda -up-> "*" Temperatura : "temperaturasAptas"


@enduml
